--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
+language: swift
+osx_image: xcode10
 podfile: Example/Podfile
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
+- gem install cocoapods --pre # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/RxAlamofire-Decodable.xcworkspace -scheme RxAlamofire-Decodable-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
